# NavMAX

./: .env.example  .gitignore  Dockerfile  FUSION_LOG.md  LICENSE  PLAN.md  RAPPORT_AUDIT_CONFORMITE.md  RAPPORT_AUDIT_v0.6.0_ARCHITECTE.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  rapport_couverture_tests.md
.github/workflows/: ci.yml  security-scan.yml
.hermes/plans/: navmax-ultimate-roadmap.md
docs/: RAPPORT_RECHERCHE_INNOVATION.md
navmax/: __init__.py  __main__.py  cli.py
navmax/ad/: __init__.py  adcs_scanner.py  attack_paths.py  bloodhound_export.py  certipy_wrapper.py  connector.py  enumerator.py  password_spray.py  responder_wrapper.py  smb_scanner.py  trust_graph.py  vuln_scanner.py
navmax/ai/: __init__.py  engine.py  hardware.py  mission_planner.py  models_catalog.py  react_agent.py  selector.py
navmax/ai/providers/: __init__.py  base.py  llamacpp.py  lmstudio.py  ollama.py  openai_compat.py
navmax/api/: app.py  auth.py  schemas.py  schemas_responses.py
navmax/api/routes/: __init__.py  ad.py  ai.py  dark_triad.py  exploit.py  firewall.py  nuclei.py  osint.py  proxy.py  scans.py  settings.py  targets.py  workspaces.py
navmax/api/static/: dashboard.html  index.html
navmax/cloud/: __init__.py  scanner.py
navmax/core/: __init__.py  audit.py  config.py  constants.py  exceptions.py  http_client.py  lazy_import.py  logging.py  plugin_manager.py  plugins.py  retry.py  task_manager.py  utils.py
navmax/cracking/: __init__.py  base.py  hashcat_wrapper.py  hydra_wrapper.py  john_wrapper.py  library.py
navmax/cracking/data/: __init__.py
navmax/dark_triad/: __init__.py  ad_specialist.py  ai_router.py  base.py  battle_manager.py  behavior.py  bootstrap.py  dashboard.html  evader.py  exploiter.py  jailbreak.py  killchain.html  killchain_engine.py  mission_planner.py  orchestrator_supreme.py  personality_detector.py  post_exploit.py  privesc.py  recon.py  registry.py  reverse_shell.py  sandbox.py  server.py  server.py.v1.bak  start_server.sh  stealth.py  tool_manager.py
navmax/db/: __init__.py  engine.py  models.py
navmax/exploit/: __init__.py  ai_generator.py  auto_pivot.py  database.py  encoders.py  evasion.py  handler.py  module.py  payloads.py  post_exploit.py  pwntools_wrapper.py  sandbox.py
navmax/exploit/modules/: __init__.py  couchdb_unauth.py  docker_api_exploit.py  elasticsearch_unauth.py  http_basic_bruteforce.py  http_put_upload.py  jenkins_script_console.py  kubernetes_anon_access.py  memcached_amplify.py  mongodb_unauth.py  mysql_bruteforce.py  nfs_export_check.py  phpmyadmin_scan.py  postgres_bruteforce.py  redis_unauth.py  rsync_unauth.py  smb_share_enum.py  (+4 more)
navmax/firewall/: __init__.py  base.py  correlation.py  fortigate.py  rule_analyzer.py  stormshield.py
navmax/infrastructure/: __init__.py  continuous_monitor.py  impact_reporter.py  remediation_advisor.py
navmax/integrations/: __init__.py  hub.py  misp.py  thehive.py
navmax/orchestrator/: engine.py
navmax/osint/: __init__.py  monitor.py  orchestrator.py
navmax/proxy/: __init__.py  certs.py  crawler.py  fuzzer.py  interceptor.py  intruder.py  mitm.py  playwright_spider.py  proxy_server.py  repeater.py  scanner.py  structural_fuzzer.py
navmax/reporting/: cvss_scorer.py  generator.py  sarif_exporter.py
navmax/scanner/: __init__.py  contextual.py  engine.py  fingerprint.py  nmap_scanner.py  nuclei_scanner.py  tcp.py  vuln_db.py
navmax/sdk/: __init__.py  client.py
navmax/tasks/: __init__.py  scan_tasks.py
navmax/web/: __init__.py  ffuf_wrapper.py  sqlmap_wrapper.py
navmax/wireless/: __init__.py  base.py  ble_scanner.py  wifi_scanner.py
navmax/workspace/: __init__.py  manager.py
nginx/: nginx.conf
rfcs/: RFC-001-masscan-integration.md  RFC-002-netexec-integration.md  RFC-003-bettercap-wifi-mitm.md  RFC-004-raptor-integration.md  RFC-005-basilisk-integration.md  RFC-006-escalategpt-integration.md  RFC-007-semgrep-integration.md
scripts/: docker-up.ps1  docker-up.sh  exclude-defender.ps1  generate-icon.py  install.ps1  launch.bat  uninstall.ps1
scripts/ci/: check_bandit.py  check_secrets.py
tests/: test_ad.py  test_ad_wrappers.py  test_ai.py  test_audit.py  test_auth.py  test_cloud.py  test_core.py  test_cracking.py  test_cracking_library.py  test_exploit.py  test_firewall.py  test_fuzzer_detection.py  test_infrastructure.py  test_integrations.py  test_intruder.py  test_mission_planner.py  test_mitm.py  test_nmap_scanner.py  test_nuclei_scanner.py  test_osint.py  test_osint_monitor.py  test_p5_p6.py  test_playwright_spider.py  test_plugin_manager.py  test_proxy.py  test_pwntools_wrapper.py  test_react_agent.py  test_reporting.py  test_reporting_integrations.py  test_sandbox.py  test_scanner_contextual.py  test_settings.py  test_tasks.py  test_web_wrappers.py  test_wireless.py  test_workspace.py
(+26 files in other folders)
