[project]
name = "navmax"
version = "0.4.0"
description = "Plateforme de cybersécurité offensive autonome pilotée par IA — Scanner réseau, Proxy MITM, Exploitation (24 exploits + AI Generator), OSINT & Graphe, AD/LDAP, Firewall, Infrastructure SOC, IA multi-provider, Évasion polymorphique, Rapports IA, SIEM/SOAR"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Raphaël Pascaud", email = "7ShIkI3@users.noreply.github.com"}]
readme = "README.md"
keywords = ["cybersecurity", "scanner", "proxy", "exploit", "osint", "ai-agent", "pentest", "red-team", "llm", "uncensored"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "scapy>=2.6.0",
    "python-nmap>=0.7.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
    "python-multipart>=0.0.17",
    "cryptography>=44.0.0",
    "networkx>=3.4.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.0",
    "packaging>=24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "ldap3>=2.9.1",
    "impacket>=0.12.0",
    "shodan>=1.31.0",
    "censys>=2.2.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
local-ai = [
    "llama-cpp-python>=0.3.0",
]
scanner = [
    "python-nmap>=0.7.1",
]
ad = [
    "ldap3>=2.9.1",
    "impacket>=0.12.0",
    "pycryptodome>=3.20.0",
]
osint = [
    "shodan>=1.31.0",
    "censys>=2.2.0",
]
proxy = [
    "playwright>=1.48.0",
]
full = [
    "navmax[dev,local-ai,ad,osint,proxy]",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
]

[project.scripts]
navmax = "navmax.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
